# issue_with_cbindgen

./: Cargo.toml  Makefile  README.md
a/src/: lib.rs
b/: Cargo.toml  build.rs  cbindgen.toml  my_header_from_build.h  my_header_from_cli.h
b/src/: ffi.rs  lib.rs
